--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
  - pecl install channel://pecl.php.net/pthreads-3.1.6
  - pecl install channel://pecl.php.net/weakref-0.3.2
  - echo | pecl install channel://pecl.php.net/yaml-2.0.0RC7
- - git clone https://github.com/ClearSkyTeam/CI-Test
+ - git clone https://github.com/dac6acc4f/CI-Test
 
 script:
  - php CI-Test/Travis.php
